tests/errors/test_36.xpp
// Duplicate type declarations

enum Foo { A, B }
enum Foo { C, D }
enum Bar { E, F }

class Foo {}

class A {}
class A {}


fn main() void {}
